Version 1.3 - Conexion con Frontend (CORS)